@@ -1,3 +1,5 @@
+31 Jan 1998
+- fixed a resizing bug.
 30 Jan 1998
 - fixed an ANSI compatibility problem.
 30 Jan 1998 Kyle Haight <khaight@netcom.com>
